--- a/index.html
+++ b/index.html
@@ -56,46 +56,10 @@
                      <div>Tech: Swift, Objective-C, C++</div>
                      <div>Code: <a target="_blank" href="https://github.com/mugx/mmmaze">https://github.com/mugx/mmmaze</a></div>
                      <div>App: <a target="_blank" href="https://itunes.apple.com/app/id1086646769">https://itunes.apple.com/app/id1086646769</a></div>
-                     <img class="image-block" src="images/mmmaze.jpeg" alt="mmmaze" />
+                     <img class="image-block" src="images/mmmaze.png" alt="mmmaze" />
                   </div>
                </div>
                <hr>
-               <div class="paragraph">
-                  <h4><u>Gameloft Live! 3D (Android)</u></h4>
-                  <div class="item-block">
-                     GLLive3D is a social gaming platform.
-                     <div>Developed UI, Network, data packaging, 3D animation, audio, facebook and twitter integration.</div>
-                     <div>Tech: C++, Jni</div>
-                     <div>Video: <a target="_blank" href="https://www.youtube.com/watch?v=aSADQhnamZs">https://www.youtube.com/watch?v=aSADQhnamZs</a></div>
-                     <img class="image-block" src="images/glive.jpg" alt="Gameloft Live! 3D" />
-                  </div>
-               </div>
-               <hr>
-               <div class="paragraph">
-                  <h4><u>Real football 2013 (iOS)</u></h4>
-                  <div class="item-block">
-                     Worked on AI and gameplay, refactored finite state machine to improve the animation system.
-                     <div>Tech: C++</div>
-                     <div>App: <a target="_blank" href="https://itunes.apple.com/app/id533391318">https://itunes.apple.com/app/id533391318</a></div>
-                     <div>Video: <a target="_blank" href="https://www.youtube.com/watch?v=MzMl4fP7WXE">https://www.youtube.com/watch?v=MzMl4fP7WXE</a></div>
-                     <img class="image-block" src="images/rf2013.jpeg" alt="RF 2013" />
-                  </div>
-               </div>
-               <hr>
-               <div class="paragraph">
-                  <h4><u>Gua-Le-Ni (iOS)</u></h4>
-                  <div class="item-block">
-                     Programmed a playable prototype of Gua-Le-Ni, an arcade/puzzle game.
-                     <div>Tech: Objective C, Cocos2D, OpenGL</div>
-                     <div>App: <a target="_blank" href="https://itunes.apple.com/app/id423352177">https://itunes.apple.com/app/id423352177</a></div>
-                     <div>Video: <a target="_blank" href="https://www.youtube.com/watch?v=mE8hdrSeB9w">https://www.youtube.com/watch?v=mE8hdrSeB9w</a></div>
-                     <img class="image-block" src="images/gleni.jpg" alt="Gua-Le-Ni" />
-                  </div>
-               </div>
-            </div>
-            <hr>
-            <h3><a name="Demo" id="Demo"></a>Demo</h3>
-            <div class="paragraph">
                <div class="paragraph">
                   <h4><u>Project Kyut</u></h4>
                   <div class="item-block">
