Adds stackoverflow link

--- a/index.html
+++ b/index.html
@@ -1,106 +1,116 @@
 <!doctype html>
 <html>
-   <head>
-      <title>Andrea Mugnaini - Senior Software Engineer</title>
-      <meta charset="utf-8"> 
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-      <meta name="description" content="Software Engineer working with Ruby, Rails, iOS, Swift, C++, Qt">
-      <link rel="stylesheet" href="stylesheets/styles.css">
-      <script>
-         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-         (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-         m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-         })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-         ga('create', 'UA-73418798-1', 'auto');
-         ga('send', 'pageview');
-      </script>
-   </head>
-   <body>
-      <div id="page-container">
-         <header>
-            <a id="header-title">Andrea Mugnaini - Senior Software Engineer</a>
-            <nav id="main-nav">
-               <ul>
-                  <li><a href="#Contact" class="active">Contact</a></li>
-                  <li><a href="#Projects" class="active">Projects</a></li>
-                  <li><a href="#Demo" class="active">Demo</a></li>
-               </ul>
-            </nav>
-         </header>
-         <section>
-            <h3><a name="Contact" id="Contact"></a>Contact</h3>
-            <div class="paragraph">
-               <div>Github -> <a target="_blank" href="https://github.com/mugx">https://github.com/mugx</a></div>
-               <div>LinkedIn -> <a target="_blank" href="https://www.linkedin.com/in/andreamugnaini">www.linkedin.com/in/andreamugnaini</a></div>
-               <div>Email -> andrea.mugx [at] gmail [dot] com</div>
-            </div>
-            <hr>
-            <h3><a name="Projects" id="Projects"></a>Projects</h3>
-            <div class="paragraph">
-               <hr>
-	            <div class="paragraph">
-                  <h4><u>Loudaze (iOS)</u></h4>
-                  <div class="item-block">
-                     Loudaze is an app useful for searching vinyls and concerts.
-                     <div>Tech: Objective-C</div>
-                     <div>App: <a target="_blank" href="https://itunes.apple.com/app/id1109590149">Loudaze</a></div>
-                     <img class="image-block" src="images/loudaze.jpeg" alt="Loudaze" />
-                  </div>
-               </div>
-               <hr>
-	            <div class="paragraph">
-                  <h4><u>mmmaze (iOS)</u></h4>
-                  <div class="item-block">
-                     mmmaze is an endless maze game.
-                     <div>Tech: Swift, Objective-C, C++</div>
-                     <div>Code: <a target="_blank" href="https://github.com/mugx/mmmaze">https://github.com/mugx/mmmaze</a></div>
-                     <div>App: <a target="_blank" href="https://itunes.apple.com/app/id1086646769">https://itunes.apple.com/app/id1086646769</a></div>
-                     <img class="image-block" src="images/mmmaze.png" alt="mmmaze" />
-                  </div>
-               </div>
-               <hr>
-               <div class="paragraph">
-                  <h4><u>Project Kyut</u></h4>
-                  <div class="item-block">
-                     Implemented a 3D vertical shooter demo. Features:
-                     <div>-> Rendering pipeline with HDR, Phong, Stencil test shaders;</div>
-                     <div>-> Particle system;</div>
-                     <div>-> Collision Detection mixing Bounding Sphere and AABB;</div>
-                     <div>-> Frustum Culling;</div>
-                     <div>-> XML level scripting.</div>
-                     <div>Tech: C++, Qt, OpenGL, GLSL.</div>
-                     <div>Video: <a target="_blank" href="https://www.youtube.com/watch?v=4UqGEFJP5_I">https://www.youtube.com/watch?v=4UqGEFJP5_I</a></div>
-                     <div>Code: <a target="_blank" href="https://bitbucket.org/mugx/projectkyut">https://bitbucket.org/mugx/projectkyut</a></div>
-                     <img class="image-block" src="images/pk.jpg" alt="Project Kyut" />
-                  </div>
-               </div>
-               <hr>
-               <div class="paragraph">
-                  <h4><u>MXParticleEditor</u></h4>
-                  <div class="item-block">
-                     A particle system editor useful to manage various particle&#39;s properties such as velocity, acceleration, fade speed, scale, texture, blending function.
-                     <div>Tech: Objective-C, Cocoa, OpenGL, GLSL</div>
-                     <div>Code: <a target="_blank" href="https://github.com/mugx/MXParticleEditor">https://github.com/mugx/MXParticleEditor</a></div>
-                     <img class="image-block" src="images/ps.png" alt="MXParticleEditor" />
-                  </div>
-               </div>
-               <hr>
-               <div class="paragraph">
-                  <h4><u>QtNetworkDemo</u></h4>
-                  <div class="item-block">
-                     QtNetworkDemo shows a client/server interaction using multi-threading and tcp-sockets.
-                     <div>Tech: C++, Qt.</div>
-                     <div>Code: <a target="_blank" href="https://github.com/mugx/QTNetworkDemo">https://github.com/mugx/QTNetworkDemo</a></div>
-                     <img class="image-block" src="images/qtdemo.png" alt="Qt Demo" />
-                  </div>
-               </div>
-               <hr>
-            </div>
-            <div id="site-footer">
-               <div class="paragraph">2008-2020 (c) - mugx</div>
-            </div>
-         </section>
-      </div>
-   </body>
+	<head>
+		<title>Andrea Mugnaini - Senior Software Engineer</title>
+		<meta charset="utf-8"> 
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="description" content="Software Engineer working with Ruby, Rails, iOS, Swift, C++, Qt">
+		<link rel="stylesheet" href="stylesheets/styles.css">
+		<script>
+			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function() {
+				(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+				m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+			})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+			ga('create', 'UA-73418798-1', 'auto');
+			ga('send', 'pageview');
+		</script>
+	</head>
+	<body>
+		<div id="page-container">
+			<header>
+				<a id="header-title">Andrea Mugnaini - Senior Software Engineer</a>
+				<nav id="main-nav">
+					<ul>
+						<li><a href="#Contact" class="active">Contact</a></li>
+						<li><a href="#Projects" class="active">Projects</a></li>
+					</ul>
+				</nav>
+			</header>
+			<section>
+				<h3><a name="Contact" id="Contact"></a>Contact</h3>
+				<div class="paragraph">
+					<div>- Stackoverflow: <a target="_blank" href="https://stackoverflow.com/users/2450755/andrea-mugnaini?tab=answers">https://stackoverflow.com/users/2450755?tab=answers</a>
+					</div>
+					<div>- Github: <a target="_blank" href="https://github.com/mugx">https://github.com/mugx</a></div>
+					<div>- LinkedIn: <a target="_blank" href="https://www.linkedin.com/in/andreamugnaini">www.linkedin.com/in/andreamugnaini</a></div>
+					<div>- Personal apps: <a target="_blank" href="https://apps.apple.com/developer/id882159231">https://apps.apple.com/developer/id882159231</a></div>
+					<div>- Email: andrea.mugx [at] gmail [dot] com</div>
+				</div>
+				<h3><a name="Projects" id="Projects"></a>Projects</h3>
+				<div class="paragraph">
+					<div class="paragraph">
+						<h4><u>Wireworld (Ruby)</u></h4>
+						<div class="item-block">
+							Wireworld is a cellular automata simulation.
+							<div>Tech: Ruby, Gosu</div>
+							<div>Code: <a target="_blank" href="https://github.com/mugx/Wireworld-ruby">https://github.com/mugx/Wireworld-ruby</a></div>
+							<img class="image-block" src="images/wireworld.gif" alt="wireworld" width = 300/>
+						</div>
+					</div>
+					<br>
+					<div class="paragraph">
+						<h4><u>mmmaze (iOS)</u></h4>
+						<div class="item-block">
+							mmmaze is an endless maze game.
+							<div>Tech: Swift</div>
+							<div>Code: <a target="_blank" href="https://github.com/mugx/mmmaze">https://github.com/mugx/mmmaze</a></div>
+							<div>App: <a target="_blank" href="https://itunes.apple.com/app/id1086646769">https://itunes.apple.com/app/id1086646769</a></div>
+							<img class="image-block" src="images/mmmaze.png" alt="mmmaze" />
+						</div>
+					</div>
+					<br>
+					<div class="paragraph">
+						<h4><u>Loudaze (iOS)</u></h4>
+						<div class="item-block">
+							Loudaze is an app useful for searching vinyls and concerts.
+							<div>Tech: Objective-C</div>
+							<div>App: <a target="_blank" href="https://itunes.apple.com/app/id1109590149">Loudaze</a></div>
+							<img class="image-block" src="images/loudaze.jpeg" alt="Loudaze" />
+						</div>
+					</div>
+					<br>
+					<div class="paragraph">
+						<h4><u>Project Kyut</u></h4>
+						<div class="item-block">
+							Implemented a 3D vertical shooter demo. Features:
+							<div>- Rendering pipeline with HDR, Phong, Stencil test shaders;</div>
+							<div>- Particle system;</div>
+							<div>- Collision Detection mixing Bounding Sphere and AABB;</div>
+							<div>- Frustum Culling;</div>
+							<div>- XML level scripting.</div>
+							<div>Tech: C++, Qt, OpenGL, GLSL.</div>
+							<div>Video: <a target="_blank" href="https://www.youtube.com/watch?v=4UqGEFJP5_I">https://www.youtube.com/watch?v=4UqGEFJP5_I</a></div>
+							<div>Code: <a target="_blank" href="https://bitbucket.org/mugx/projectkyut">https://bitbucket.org/mugx/projectkyut</a></div>
+							<img class="image-block" src="images/pk.jpg" alt="Project Kyut" />
+						</div>
+					</div>
+					<br>
+					<div class="paragraph">
+						<h4><u>MXParticleEditor</u></h4>
+						<div class="item-block">
+							A particle system editor useful to manage various particle&#39;s properties such as velocity, acceleration, fade speed, scale, texture, blending function.
+							<div>Tech: Objective-C, Cocoa, OpenGL, GLSL</div>
+							<div>Code: <a target="_blank" href="https://github.com/mugx/MXParticleEditor">https://github.com/mugx/MXParticleEditor</a></div>
+							<img class="image-block" src="images/ps.png" alt="MXParticleEditor" />
+						</div>
+					</div>
+					<br>
+					<div class="paragraph">
+						<h4><u>QtNetworkDemo</u></h4>
+						<div class="item-block">
+							QtNetworkDemo shows a client/server interaction using multi-threading and tcp-sockets.
+							<div>Tech: C++, Qt.</div>
+							<div>Code: <a target="_blank" href="https://github.com/mugx/QTNetworkDemo">https://github.com/mugx/QTNetworkDemo</a></div>
+							<img class="image-block" src="images/qtdemo.png" alt="Qt Demo" />
+						</div>
+					</div>
+					<br>
+				</div>
+				<div id="site-footer">
+					<div class="paragraph">2008-2021 (c) - mugx</div>
+				</div>
+			</section>
+		</div>
+	</body>
 </html>
